--- a/iso-build/config/includes.binary/install/preseed_base.cfg
+++ b/iso-build/config/includes.binary/install/preseed_base.cfg
@@ -25,6 +25,7 @@ d-i preseed/late_command string \
   echo 'deb http://deb.debian.org/debian buster-updates main contrib non-free' >> /target/etc/apt/sources.list; \
   in-target bash /usr/local/bin/agg-init.sh; \
   in-target sed -r -i 's@(^.+\s+/(home|tmp)\s+ext4\s+.*defaults)@\1,nosuid@g' /etc/fstab; \
+  in-target bash -c "echo '\EFI\debian\grubx64.efi' > /boot/efi/startup.nsh"; \
   in-target sed -i 's#^\(GRUB_CMDLINE_LINUX_DEFAULT="quiet\)"$#\1 elevator=deadline cgroup_enable=memory swapaccount=1 cgroup.memory=nokmem apparmor=1 security=apparmor ipv6.disable=1"#' /etc/default/grub; \
   in-target cp /usr/share/images/desktop-base/Malcolm_background.png /boot/grub; \
   in-target bash /usr/local/bin/preseed_late_user_config.sh; \
