--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -1,42 +1,165 @@
 filter {
-
-        ruby {
-                id => "ruby_suricata_filter_3"
-                code => "
-                        File.write('log.txt', 'filter_3!\n', mode: 'a')
-                        "
-        }
-
         # If message looks like json, try to parse it as such. Otherwise, fall back to csv or grok.
         if [message] =~ /^{.*}$/ {
+
+                # I don't know if we actually need this
                 json {
                         source => "message"
                 }
 
-                # I recommend renaming the fields below to be consistent with other log sources.  This makes it easy to "pivot" between logs
-                # mutate {
-                #         rename => [ "src_ip", "source.ip" ]
-                #         rename => [ "dest_ip", "destination.ip" ]
-                #         rename => [ "src_port", "source.port" ]
-                #         rename => [ "dest_port", "destination.port" ]
-                #         rename => [ "timestamp", "@timestamp" ]
-                #         rename => [ "event_type", "event.type" ] #needs to be added to Malcolm
-                #         rename => [ "proto", "network.transport" ]
-                #         For Alert Fields
-                #         rename => [ "alert.gid", "event.id" ] # May not be the right field to rename
-                #         rename => [ "alert.action", "event.action" ] # May not be the right field to rename
-                #         rename => [ "alert.signature_id", "suricata.signatures.signature_id" ] # May not be the right field to rename, Needs to be added to Malcolm
-                #         rename => [ "alert.signature", "suricata.signatures.event_message" ] # May not be the right field to rename, Needs to be added to Malcolm
-                #         rename => [ "alert.app_proto", "network.protocol" ] # May not be the right field to rename
-                #         rename => [ "alert.rev", "suricata.signatures.signature_revision" ] # May not be the right field to rename, Needs to be added to Malcolm
-                #         rename => [ "alert.severity", "event.severity" ] # May not be the right field to rename, Needs to be added to Malcolm
-                #         rename => [ "alert.category", "event.category" ] # May not be the right field to rename
-                #         Keep pcap name, use something logical fields?   
+                ###
+                #
+                # This section will be for Appending "[suricata]" to the
+                # beggining of field names.  We will map them to ECS later in this script
+                #
+                ###
+
+                #General Alert renaming
+                mutate { 
+                        id => "mutate_rename_general_suricata_alert_log_type"
+                        rename => { "[alert]" => "[suricata][alert]" }
+                }
+
+                #General anomaly specific fields
+                mutate { 
+                        id => "mutate_rename_general_suricata_anomaly_log_type"
+                        rename => { "[anomaly]" => "[suricata][anomaly]" }
+                }
+
+                #General http specific fields
+                mutate { 
+                        id => "mutate_rename_general_suricata_https_log_type"
+                        rename => { "[http]" => "[suricata][http]" }
+                }
+
+                #General dns specific fields
+                mutate { 
+                        id => "mutate_rename_general_suricata_dns_log_type"
+                        rename => { "[dns]" => "[suricata][dns]" }
+                }
+
+                #General flow specific fields
+                mutate { 
+                        id => "mutate_rename_general_suricata_flow_log_type"
+                        rename => { "[flow]" => "[suricata][flow]" }
+                }
+
+                #General tls specific fields
+                mutate { 
+                        id => "mutate_rename_general_suricata_tls_log_type"
+                        rename => { "[tls]" => "[suricata][tls]" }
+                }
+
+                #General fileinfo specific fields
+                mutate { 
+                        id => "mutate_rename_general_suricata_fileinfo_log_type"
+                        rename => { "[fileinfo]" => "[suricata][fileinfo]" }
+                }
+
+                #General smb specific fields
+                mutate { 
+                        id => "mutate_rename_general_suricata_smb_log_type"
+                        rename => { "[smb]" => "[suricata][smb]" }
+                }
+
+                #General ssh specific fields
+                mutate { 
+                        id => "mutate_rename_general_suricata_ssh_log_type"
+                        rename => { "[ssh]" => "[suricata][ssh]" }
+                }
+
+                #General ftp specific fields
+                mutate { 
+                        id => "mutate_rename_general_suricata_ftp_log_type"
+                        rename => { "[ftp]" => "[suricata][ftp]" }
+                }
+
+                #General metadata specific fields
+                mutate { 
+                        id => "mutate_rename_general_suricata_metadata_log_type"
+                        rename => { "[metadata]" => "[suricata][metadata]" }
+                }
+
+                #FIXME
+                #General files specific fields
+                # mutate { 
+                #         id => "mutate_rename_general_suricata_files_log_type"
+                #         rename => { "[files]" => "[suricata][files]" }
                 # }
-                #if [event_type] == "alert" {
+
+                #General tcp specific fields
+                mutate { 
+                        id => "mutate_rename_general_suricata_tcp_log_type"
+                        rename => { "[tcp]" => "[suricata][tcp]" }
+                }
+
+                #General stats specific fields
+                mutate { 
+                        id => "mutate_rename_general_suricata_stats_log_type"
+                        rename => { "[stats]" => "[suricata][stats]" }
+                }
+
+                #Renaming the global fields of every Suricata event type
+                mutate {
+                        rename => [ "src_ip", "source.ip" ]
+                        rename => [ "dest_ip", "destination.ip" ]
+                        rename => [ "src_port", "source.port" ]
+                        rename => [ "dest_port", "destination.port" ]
+                        rename => [ "timestamp", "@timestamp" ]
+                        rename => [ "event_type", "event.type" ]
+                        rename => [ "proto", "network.transport" ]  
+                }
+
+                ###
+                #
+                # This section will be for renaming specific event type field names
+                # that are able to be mapped to the Elastic Common Schema (ECS)
+                #
+                ###
+
+                #Specific Alert renaming
+                mutate { 
+                        id => "mutate_rename_suricata_alert_log_type"
+                        rename => { "[suricata][alert][severity]" => "[event][severity]"}
+                }
+
+                #Specific http renaming
+                mutate { 
+                        id => "mutate_rename_suricata_http_log_type"
+                        rename => { "[suricata][http][protocol]" => "[http][version]"}
+                        rename => { "[suricata][http][status]" => "[http][response][status_code]"}
+                }
+
+                #Specific dns renaming
+                mutate { 
+                        id => "mutate_rename_suricata_dns_log_type"
+                        rename => { "[suricata][dns][id]" => "[dns][id]"}
+                        rename => { "[suricata][dns][type]" => "[dns][type]"}
+                        rename => { "[suricata][dns][rcode]" => "[dns][response_code]"}
+                }
+
+                #Specific tls renaming
+                mutate { 
+                        id => "mutate_rename_suricata_tls_log_type"
+                        rename => { "[suricata][tls][version]" => "[tls][version]"}
+                        rename => { "[suricata][tls][ja3s]" => "[tls][server][ja3s]"}
+                        rename => { "[suricata][tls][ja3]" => "[tls][client][ja3]"}
+                }
+
+                #Specific fileinfo renaming
+                mutate { 
+                        id => "mutate_rename_suricata_fileinfo_log_type"
+                        rename => { "[suricata][fileinfo][size]" => "[file][size]"}
+                        rename => { "[suricata][fileinfo][sid]" => "[file][uid]"}
+                        rename => { "[suricata][fileinfo][filename]" => "[file][path]"}
+                }
+
+                #This is done in security onion, might be good to add, but not including it yet
+                #Not in common schema, still think it would be helpful, needs to be added to Malcolm
+                # if [event_type] == "alert" {
                 #         if [alert][severity] == 1 {
                 #                 mutate {
-                #                         add_field => { "event.severity_name" => "High" } # Not in common schema, still think it would be helpful, needs to be added to Malcolm
+                #                         add_field => { "event.severity_name" => "High" }
                 #                 }
                 #         }
                 #         if [alert][severity] == 2 {
@@ -49,76 +172,10 @@ filter {
                 #                         add_field => { "event.severity_name" => "Low" }
                 #                 }
                 #         }
-                #  }
-                #
-                #
-
-
-                ruby {
-                        id => "ruby_suricata_hello_world"
-                        code => "
-                                File.write('log.txt', 'Hello World!\n', mode: 'a')
-                                "
-                }
-
-
-                # ###### This is from security onion.  I think it will be good #############
-                # # This will translate the alert.severity field into a severity field of either High, Medium, or Low
-                # if [event_type] == "alert" {
-                #         if [alert][severity] == 1 {
-                #                 mutate {
-                #                         add_field => { "severity" => "High" }
-                #                 }
-                #         }
-                #         if [alert][severity] == 2 {
-                #                 mutate {
-                #                         add_field => { "severity" => "Medium" }
-                #                 }
-                #         }
-                #         if [alert][severity] == 3 {
-                #                 mutate {
-                #                         add_field => { "severity" => "Low" }
-                #                 }
-                #         }
-                #                 # If the alert is a Snort GPL alert break it apart for easier reading and categorization
-                #         if [alert][signature] =~ "GPL " {
-                #                 # This will parse out the category type from the alert
-                #                 grok {
-                #                         match => { "[alert][signature]" => "GPL\s+%{DATA:category}\s" }
-                #                 }
-                #                 # This will store the category
-                #                 mutate {
-                #                         add_field => { "rule_type" => "Snort GPL" }
-                #                         lowercase => [ "category" ]
-                #                 }
-                #         }
-                #                 # If the alert is an Emerging Threat alert break it apart for easier reading and categorization
-                #         if [alert][signature] =~ "ET " {
-                #                 # This will parse out the category type from the alert
-                #                 grok {
-                #                         match => { "[alert][signature]" => "ET\s+%{DATA:category}\s" }
-                #                 }
-                #                 # This will store the category
-                #                 mutate {
-                #                         add_field => { "rule_type" => "Emerging Threats" }
-                #                         lowercase => [ "category" ]
-                #                 }
-                #         }
-                #         # This section adds URLs to lookup information about a rule online
-                #         if [rule_type] == "Snort GPL" {
-                #                 mutate {
-                #                         add_field => [ "signature_info", "https://www.snort.org/search?query=%{[alert][gid]}-%{[alert][signature_id]}" ]
-                #                 }
-                #         }
-                #         if [rule_type] == "Emerging Threats" {
-                #                 mutate {
-                #                         add_field => [ "signature_info", "http://doc.emergingthreats.net/%{[alert][signature_id]}" ]
-                #                 }
-                #         }
                 # }
         }
-        #  else {
-        #         drop { id => "drop_suricata_invalid_logs" }
-        # }
+         else {
+                drop { id => "drop_suricata_invalid_logs" }
+        }
 
 }
