--- a/kubernetes/01-malcolm.yml
+++ b/kubernetes/01-malcolm.yml
@@ -2,24 +2,25 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  annotations:
-    kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/backend-protocol: https
-    nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
-    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
   name: nginx-ingress
   namespace: malcolm
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/backend-protocol: "https"
+    nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
+    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
 spec:
   rules:
   - http:
       paths:
-      - backend:
+      - path: /
+        pathType: Prefix
+        backend:
           service:
             name: nginx-proxy
             port:
               number: 443
-        path: /
-        pathType: Prefix
+
 ---
 apiVersion: v1
 kind: Service
@@ -28,9 +29,11 @@ metadata:
   namespace: malcolm
 spec:
   ports:
-  - port: 443
+    - port: 443
+      protocol: TCP
   selector:
     app: malcolm-app
+
 ---
 apiVersion: v1
 kind: Service
@@ -39,10 +42,12 @@ metadata:
   namespace: malcolm
 spec:
   ports:
-  - port: 10004
+    - port: 10004
+      protocol: TCP
   selector:
     app: malcolm-app
     name: freq-container
+  
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -50,10 +55,10 @@ metadata:
   name: malcolm-app
   namespace: malcolm
 spec:
-  replicas: 1
   selector:
     matchLabels:
       app: malcolm-app
+  replicas: 1
   template:
     metadata:
       labels:
@@ -61,56 +66,57 @@ spec:
     spec:
       containers:
       - name: freq-container
-        image: ghcr.io/idaholab/malcolmnetsec/nginx-proxy:kubernetes
-      - env:
-        - name: PUID
-          value: "1000"
-        - name: PGID
-          value: "1000"
-        - name: PUSER_CA_TRUST
-          value: /var/local/ca-trust
-        - name: VIRTUAL_HOST
-          value: freq.malcolm.local
-        - name: FREQ_LOOKUP
-          value: "true"
-        - name: FREQ_SEVERITY_THRESHOLD
-          value: "2.0"
-        - name: TOTAL_MEGABYTES_SEVERITY_THRESHOLD
-          value: "1000"
-        - name: CONNECTION_SECONDS_SEVERITY_THRESHOLD
-          value: "3600"
-        - name: SENSITIVE_COUNTRY_CODES
-          value: AM,AZ,BY,CN,CU,DZ,GE,HK,IL,IN,IQ,IR,KG,KP,KZ,LY,MD,MO,PK,RU,SD,SS,SY,TJ,TM,TW,UA,UZ
         image: ghcr.io/idaholab/malcolmnetsec/freq:kubernetes
-      - name: nginx-proxy-container
-        image: ghcr.io/idaholab/malcolmnetsec/nginx-proxy:kubernetes
         imagePullPolicy: Always
-        name: freq-container
         ports:
-        - containerPort: 10004
-      - env:
-        - name: PUID
-          value: "1000"
-        - name: PGID
-          value: "1000"
-        - name: PUSER_CA_TRUST
-          value: /var/local/ca-trust
-        - name: NGINX_BASIC_AUTH
-          value: "true"
-        - name: NGINX_LDAP_TLS_STUNNEL
-          value: "false"
-        - name: NGINX_LDAP_TLS_STUNNEL_CHECK_HOST
-        - name: NGINX_LDAP_TLS_STUNNEL_CHECK_IP
-        - name: NGINX_LDAP_TLS_STUNNEL_VERIFY_LEVEL
-          value: "2"
-        - name: NGINX_SSL
-          value: "true"
-        - name: NGINX_LOG_ACCESS_AND_ERRORS
-          value: "false"
-        - name: CONFIG_MAP_DIR
-          value: configmap
+          - containerPort: 10004
+        env:
+          - name: PUID
+            value: '1000'
+          - name: PGID
+            value: '1000'
+          - name: PUSER_CA_TRUST
+            value: '/var/local/ca-trust'
+          - name: VIRTUAL_HOST
+            value: 'freq.malcolm.local'
+          - name: FREQ_LOOKUP 
+            value: 'true'
+          - name: FREQ_SEVERITY_THRESHOLD 
+            value: '2.0'
+          - name: TOTAL_MEGABYTES_SEVERITY_THRESHOLD 
+            value: 1000
+          - name: CONNECTION_SECONDS_SEVERITY_THRESHOLD 
+            value: 3600
+          - name: SENSITIVE_COUNTRY_CODES 
+            value: 'AM,AZ,BY,CN,CU,DZ,GE,HK,IL,IN,IQ,IR,KG,KP,KZ,LY,MD,MO,PK,RU,SD,SS,SY,TJ,TM,TW,UA,UZ'
+      - name: nginx-proxy-container
         image: malcolmnetsec/nginx-proxy:kubernetes
         imagePullPolicy: Always
+        ports:
+          - containerPort: 443
+        env:
+          - name: PUID
+            value: '1000'
+          - name: PGID
+            value: '1000'
+          - name: PUSER_CA_TRUST
+            value: '/var/local/ca-trust'
+          - name: NGINX_BASIC_AUTH
+            value: 'true'
+          - name: NGINX_LDAP_TLS_STUNNEL
+            value: 'false'
+          - name: NGINX_LDAP_TLS_STUNNEL_CHECK_HOST
+            value: ''
+          - name: NGINX_LDAP_TLS_STUNNEL_CHECK_IP
+            value: ''
+          - name: NGINX_LDAP_TLS_STUNNEL_VERIFY_LEVEL
+            value: '2'
+          - name: NGINX_SSL
+            value: 'true'
+          - name: NGINX_LOG_ACCESS_AND_ERRORS
+            value: 'false'
+          - name: CONFIG_MAP_DIR
+            value: 'configmap'
         livenessProbe:
           exec:
             command:
@@ -118,33 +124,30 @@ spec:
             - --insecure
             - --silent
             - https://localhost:443
-          failureThreshold: 10
           initialDelaySeconds: 120
           periodSeconds: 30
-          successThreshold: 1
           timeoutSeconds: 15
-        name: nginx-proxy-container
-        ports:
-        - containerPort: 443
+          successThreshold: 1
+          failureThreshold: 10
         volumeMounts:
-        - mountPath: /etc/nginx/configmap
-          name: etc-nginx-volume
-        - mountPath: /var/local/ca-trust/configmap
-          name: var-local-catrust-volume
-        - mountPath: /etc/nginx/certs/configmap
-          name: etc-nginx-certs-volume
-        - mountPath: /etc/nginx/dhparam/configmap
-          name: etc-nginx-certs-pem-volume
+        - name: etc-nginx-volume
+          mountPath: /etc/nginx/configmap
+        - name: var-local-catrust-volume
+          mountPath: /var/local/ca-trust/configmap
+        - name: etc-nginx-certs-volume
+          mountPath: /etc/nginx/certs/configmap
+        - name: etc-nginx-certs-pem-volume
+          mountPath: /etc/nginx/dhparam/configmap
       volumes:
-      - configMap:
+      - name: etc-nginx-volume
+        configMap:
           name: etc-nginx
-        name: etc-nginx-volume
-      - configMap:
+      - name: var-local-catrust-volume
+        configMap:
           name: var-local-catrust
-        name: var-local-catrust-volume
-      - configMap:
+      - name: etc-nginx-certs-volume
+        configMap:
           name: etc-nginx-certs
-        name: etc-nginx-certs-volume
-      - configMap:
+      - name: etc-nginx-certs-pem-volume
+        configMap:
           name: etc-nginx-certs-pem
-        name: etc-nginx-certs-pem-volume
